<resources>
    <string name="app_name">FokusBelajar</string>
    <string name="welcome">Hello\! Happy Valentine Day\!</string>
    <string name="wish"><![CDATA[Happy Valentine Day\! I\'m happy to be in love with u, it\'s the best thing to ever happen to me. I love u<3. This special day is all about being giving thanks, and there is no special person i have to thank. and it\'s you, All my love.]]></string>
    <string name="how">Aloo ayay, how\'s ur dayy\? i hope ur doing fine yaa\!</string>
    <string name="satu">You are a very kind and perfect person. \nNever listen to the words of those who say \nyou\'re not good and perfect.</string>
    <string name="dua">you\'re so preciuous to me and everyone. \nDon\'t ever feel like you\'re useless.</string>
    <string name="tiga">I hope u ca become a greater and stronger \nman in the future, \nthank u for being born in the same world \nas me.</string>
    <string name="lop">With love, Nopas ♡</string>
</resources>