<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="293dp"
            android:layout_height="242dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/vale"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginLeft="65dp"
            android:background="#EAC7C7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="sans-serif-medium"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/how"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/wish"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="#ECE8DD">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="37dp"
                        android:src="@drawable/book" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/satu"
                        android:textColor="#EFA3C8" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="37dp"
                        android:src="@drawable/book" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/dua"
                        android:textColor="#9D3C72" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="37dp"
                        android:src="@drawable/book" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/tiga"
                        android:textColor="#7B2869" />
                </TableRow>
            </TableLayout>
        </RelativeLayout>

        <TableLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/aak" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/am" />
            </TableRow>

        </TableLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#B5D5C5"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lop"
            android:textColor="@color/black"
           />

    </RelativeLayout>

    </LinearLayout>

</ScrollView>